Fixes text wrapping on long answers

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -16,6 +16,7 @@
   margin-right: auto;
   margin-bottom: 0px;
   width: 80%;
+  word-wrap:break-word;
   color: #000000;
   border-top-left-radius: 0px;
   border-top-right-radius: 0px;
